# melvin

./: .gitignore  README.md  benchmark_logs.txt  code_generator.py  modality_detector.py  pyproject.toml  run_agent.py  test_modality.py
agent_output/: generated_train_script.py  grading_report.json  grading_report_seed_42.json  reasoning_log.jsonl  submission.csv
agents/: code_generator.py  grader_wrapper.py  modality_detector.py  orchestrator.py  refiner.py  retriever.py  run_benchmark.py
tests/: test_modality.py  test_modality_evals.py
