[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.4",
    "litellm>=1.80.7",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-v"
testpaths = ["tests"]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]