[project]
name = "Melvin"
version = "0.1.0"
description = "Melvin is an AI Machine Learning Engineer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.9.2",
    "langgraph>=1.0.4",
    "litellm>=1.80.7",
    "pandas>=2.3.3",
    "py7zr>=1.0.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-v"
testpaths = ["tests"]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
